--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "python.pythonPath": "C:\\ProgramData\\Anaconda3\\envs\\MalDroid_feature_engineering\\python.exe"
+    "python.pythonPath": "C:\\ProgramData\\Anaconda3\\envs\\MalDroid_feature_engineering\\python.exe",
+    "jupyter.textOutputLimit": 0
 }
